--- a/contact-us.html
+++ b/contact-us.html
@@ -84,7 +84,7 @@ src="https://www.facebook.com/tr?id=568484146192286&ev=PageView&noscript=1"
                 <h3 class="widget_title">Contact Us</h3>
                 <div class="vs-widget-contact">
                     <p class="footer-info"><i class="fas fa-map-marker-alt"></i><strong>Trophero chess club</strong><br>
-6th Floor, Suite No: 83,Door No 63/700,D Space,Sky Tower, Opp. Hyson Heritage,<br> Mavoor Road Jn, Kozhikode,Kerala, India. PIN:673001
+Areekode Road, Near The Motor Room<br> Kaloth, Kondotty,Malappuram,Kerala,India, PIN:673638
 </p>
                     <p class="footer-info footer-address"><i class="fas fa-envelope"></i><a href="mailto:hello@tropherochess.com">hello@tropherochess.com</a></p>
                    <p class="footer-info"><i class="fa fa-whatsapp" aria-hidden="true"></i><a href="https://api.whatsapp.com/send?phone=918129370901" target="_blank">+91 8129370901</a></p>
@@ -240,7 +240,7 @@ src="https://www.facebook.com/tr?id=568484146192286&ev=PageView&noscript=1"
                                 <h4 class="info-title">Trophero chess club</h4>
                                 <p class="info-text">
 6th Floor, Suite No: 83,Door No 63/700,D Space,Sky Tower, Opp. Hyson Heritage,<br>
-Mavoor Road Jn,Kozhikode,Kerala,India. PIN:673001</p>
+Kaloth, Kondotty,Malappuram,Kerala,India, PIN:673638</p>
                               
                             </div>
                         </div>   
@@ -391,7 +391,7 @@ skills through the game of chess, fostering a lifelong love for the game.
                             <h3 class="widget_title">Contact Us</h3>
                             <div class="vs-widget-contact">
                                 <p class="footer-info "><i class="fa fa-map-marker-alt"></i><strong>Trophero chess club</strong><br>
-6th Floor, Suite No: 83,Door No 63/700,D Space,Sky Tower, Opp. Hyson Heritage, <br>Mavoor Road Jn, Calicut,Kerala,India,PIN:673001
+Areekode Road, Near The Motor Room <br>Kaloth, Kondotty,Malappuram,Kerala,India, PIN:673638
 </p>
                                 <p class="footer-info footer-address"><i class="fa fa-envelope"></i><a href="mailto:hello@tropherochess.com">hello@tropherochess.com</a></p>
                                 <p class="footer-info"><i class="fa fa-whatsapp"></i><a href="https://api.whatsapp.com/send?phone=918129370901" target="_blank">+91 8129370901</a></p>
