--- a/contact-us.html
+++ b/contact-us.html
@@ -239,7 +239,7 @@ Areekode Road, Near The Motor Room<br> Kaloth, Kondotty,Malappuram,Kerala,India,
                             <div class="media-body">
                                 <h4 class="info-title">Trophero chess club</h4>
                                 <p class="info-text">
-6th Floor, Suite No: 83,Door No 63/700,D Space,Sky Tower, Opp. Hyson Heritage,<br>
+Areekode Road, Near The Motor Room<br>
 Kaloth, Kondotty,Malappuram,Kerala,India, PIN:673638</p>
                               
                             </div>
