--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <h3 class="widget_title">Contact Us</h3>
                 <div class="vs-widget-contact">
                     <p class="footer-info"><i class="fas fa-map-marker-alt"></i><strong>Trophero chess club</strong><br>
-Areekode Road, Near The Motor Room <br>Kaloth, Kondotty,Kerala,India, PIN:673638
+Areekode Road, Near The Motor Room <br>Kaloth, Kondotty,Malappuram,Kerala,India, PIN:673638
 </p>
                     <p class="footer-info footer-address"><i class="fas fa-envelope"></i><a href="mailto:hello@tropherochess.com">hello@tropherochess.com</a></p>
                     <p class="footer-info"><i class="fa fa-whatsapp" aria-hidden="true"></i><a href="https://api.whatsapp.com/send?phone=918129370901&text=I%20am%20interested%20to%20know%20more." target="_blank">+91 8129370901</a></p>
@@ -1226,7 +1226,7 @@ skills through the game of chess, fostering a lifelong love for the game.
                             <h3 class="widget_title">Contact Us</h3>
                             <div class="vs-widget-contact">
                                 <p class="footer-info "><i class="fa fa-map-marker-alt"></i><strong>Trophero chess club</strong><br>
-Areekode Road, Near The Motor Room <br>Kaloth, Kondotty,Kerala,India, PIN:673638
+Areekode Road, Near The Motor Room <br>Kaloth, Kondotty,Malappuram,Kerala,India, PIN:673638
 </p>
                                 <p class="footer-info footer-address"><i class="fa fa-envelope"></i><a href="mailto:hello@tropherochess.com">hello@tropherochess.com</a></p>
                                 <p class="footer-info"><i class="fa fa-whatsapp" aria-hidden="true"></i><a href="https://api.whatsapp.com/send?phone=918129370901" target="_blank">+91 8129370901</a></p>
