--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -60,7 +60,7 @@
                             <img src="assets/img/logo.png">
                         </a>
                     </div>
-                    <p class="about-text">The Trophero chess club, founded in 2017 in Chennai by FIDE National Instructor Survar Subair. Known for its commitment to excellence, the club has produced students who have achieved titles as National and State Champions. With over 7 years of competitive training experience, the team at Trophero is dedicated to nurturing chess talent and advancing player’s skills to achieve success at all levels.</p>
+                    <p class="about-text">The Trophero chess club, founded in 2017 in Chennai by FIDE National Instructor Sarvar Subair. Known for its commitment to excellence, the club has produced students who have achieved titles as National and State Champions. With over 7 years of competitive training experience, the team at Trophero is dedicated to nurturing chess talent and advancing player’s skills to achieve success at all levels.</p>
                     
                 </div>
             </div>
@@ -69,7 +69,7 @@
                 <h3 class="widget_title">Contact Us</h3>
                 <div class="vs-widget-contact">
                     <p class="footer-info"><i class="fas fa-map-marker-alt"></i><strong>Trophero chess club</strong><br>
-6th Floor, Suite No: 83,Door No 63/700,D Space,Sky Tower, Opp. Hyson Heritage, <br>Mavoor Road Jn,Kozhikode,Kerala,India, PIN:673001
+Areekode Road, Near The Motor Room<br>Kaloth, Kondotty,Malappuram,Kerala,India, PIN:673638
 </p>
                     <p class="footer-info footer-address"><i class="fas fa-envelope"></i><a href="mailto:hello@tropherochess.com">hello@tropherochess.com</a></p>
                     <p class="footer-info"><i class="fa fa-whatsapp" aria-hidden="true"></i><a href="https://api.whatsapp.com/send?phone=918129370901" target="_blank">+91 8129370901</a></p>
@@ -379,7 +379,7 @@ skills through the game of chess, fostering a lifelong love for the game.
                             <h3 class="widget_title">Contact Us</h3>
                             <div class="vs-widget-contact">
                                 <p class="footer-info "><i class="fa fa-map-marker-alt"></i><strong>Trophero chess club</strong><br>
-6th Floor, Suite No: 83,Door No 63/700,D Space,Sky Tower, Opp. Hyson Heritage, <br>Mavoor Road Jn,Kozhikode,Kerala,India, PIN:673001
+Areekode Road, Near The Motor Room<br>Kaloth, Kondotty,Malappuram,Kerala,India, PIN:673638
 </p>
                                 <p class="footer-info footer-address"><i class="fa fa-envelope"></i><a href="mailto:hello@tropherochess.com">hello@tropherochess.com</a></p>
                                 <p class="footer-info"><i class="fa fa-whatsapp"></i><a href="https://api.whatsapp.com/send?phone=918129370901" target="_blank">+91 8129370901</a></p>
