--- a/gallery.html
+++ b/gallery.html
@@ -74,7 +74,7 @@
                             <img src="assets/img/logo.png">
                         </a>
                     </div>
-                    <p class="about-text">The Trophero chess club, founded in 2017 in Chennai by FIDE National Instructor Survar Subair. Known for its commitment to excellence, the club has produced students who have achieved titles as National and State Champions. With over 7 years of competitive training experience, the team at Trophero is dedicated to nurturing chess talent and advancing player’s skills to achieve success at all levels.</p>
+                    <p class="about-text">The Trophero chess club, founded in 2017 in Chennai by FIDE National Instructor Sarvar Subair. Known for its commitment to excellence, the club has produced students who have achieved titles as National and State Champions. With over 7 years of competitive training experience, the team at Trophero is dedicated to nurturing chess talent and advancing player’s skills to achieve success at all levels.</p>
                     
                 </div>
             </div>
